--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
   },
   "homepage": "https://github.com/team-socket/sandbox#readme",
   "dependencies": {
-    "inquirer": "^8.2.5"
+    "axios": "^1.3.4",
+    "dotenv": "^16.0.3",
+    "eslint": "^8.36.0",
+    "inquirer": "^8.2.5",
+    "jest": "^29.5.0",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1"
   }
 }
